--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -13,7 +13,7 @@ on:
         required: false
         default: false
         type: boolean
-      extenstions:
+      extensions:
         description: "Comma-separated PHP extensions"
         required: false
         default: "xdebug"
